--- a/test.html
+++ b/test.html
@@ -1,5 +1,18 @@
-<html>
-<body>
-HI Ashish !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Bootstrap Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="text-center mt-5">
+  <h1 class="text-primary">Bootstrap is Working!</h1>
+  <p class="lead">If this button looks styled, you're good to go:</p>
+  <button class="btn btn-success">Test Button</button>
+
+  <!-- Bootstrap JS Bundle CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
